Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8682

QPlainTextEdit: When scrolling vertically using the arrow keys then the valueChanged() signal is not emitted from the vertical scrollbar

XMLWordPrintable

    • 09c3cd850 (dev), 9dea40363 (6.5), 2c4fac4a3 (6.4), 52f8fd2e6 (tqtc/lts-6.2)

      QPlainTextEdit: When scrolling vertically using the arrow keys then the valueChanged() signal is not emitted from the vertical scrollbar

      Example is attached along with a patch that solves the problem.

        1. main.cpp
          2 kB
          Andy Shaw (closed Nokia identity)
        2. patch.diff
          0.6 kB
          Andy Shaw (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-8682
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            andysh Andy Shaw
            Votes:
            5 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes