src/widgets/widgets/qplaintextedit.cpp
@@ -622,10 +622,7 @@ void QPlainTextEditPrivate::setTopBlock(int blockNumber, int lineNumber, int dx)
         lineNumber = maxTopLine - block.firstLineNumber();
     }
 
-    {
-        const QSignalBlocker blocker(vbar);
-        vbar->setValue(newTopLine);
-    }
+    vbar->setValue(newTopLine);
 
     if (!dx && blockNumber == control->topBlock && lineNumber == topLine)
         return;
@@ -641,10 +638,7 @@ void QPlainTextEditPrivate::setTopBlock(int blockNumber, int lineNumber, int dx)
         control->topBlock = blockNumber;
         topLine = lineNumber;
 
-        {
-            const QSignalBlocker blocker(vbar);
-            vbar->setValue(block.firstLineNumber() + lineNumber);
-        }
+        vbar->setValue(block.firstLineNumber() + lineNumber);
 
         if (dx || dy) {
             viewport->scroll(q->isRightToLeft() ? -dx : dx, dy);
@@ -1002,10 +996,7 @@ void QPlainTextEditPrivate::_q_adjustScrollbars()
     if (firstVisibleBlock.isValid())
         visualTopLine = firstVisibleBlock.firstLineNumber() + topLine;
 
-    {
-        const QSignalBlocker blocker(vbar);
-        vbar->setValue(visualTopLine);
-    }
+    vbar->setValue(visualTopLine);
 
     hbar->setRange(0, (int)documentSize.width() - viewport->width());
     hbar->setPageStep(viewport->width());
